--- a/configpanel/res/xml/button_panel.xml
+++ b/configpanel/res/xml/button_panel.xml
@@ -50,4 +50,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/fingerprint_title">
+
+        <SwitchPreference
+            android:key="pocketmode_service"
+            android:title="@string/fingerprint_pocketmode_title"
+            android:summary="@string/fingerprint_pocketmode_summary" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
