--- a/configpanel/res/xml/button_panel.xml
+++ b/configpanel/res/xml/button_panel.xml
@@ -14,35 +14,37 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory
-        android:title="@string/notification_slider_category_title">
+    <ListPreference
+        android:key="keycode_top_position"
+        android:dialogTitle="@string/notification_slider_selection_dialog_title"
+        android:title="@string/notification_slider_top_position"
+        android:summary="%s"
+        android:entries="@array/notification_slider_action_entries"
+        android:entryValues="@array/notification_slider_action_entry_values" />
 
-        <ListPreference
-            android:key="keycode_top_position"
-            android:dialogTitle="@string/notification_slider_selection_dialog_title"
-            android:title="@string/notification_slider_top_position"
-            android:summary="%s"
-            android:entries="@array/notification_slider_action_entries"
-            android:entryValues="@array/notification_slider_action_entry_values" />
+    <ListPreference
+        android:key="keycode_middle_position"
+        android:dialogTitle="@string/notification_slider_selection_dialog_title"
+        android:title="@string/notification_slider_middle_position"
+        android:summary="%s"
+        android:entries="@array/notification_slider_action_entries"
+        android:entryValues="@array/notification_slider_action_entry_values" />
 
-        <ListPreference
-            android:key="keycode_middle_position"
-            android:dialogTitle="@string/notification_slider_selection_dialog_title"
-            android:title="@string/notification_slider_middle_position"
-            android:summary="%s"
-            android:entries="@array/notification_slider_action_entries"
-            android:entryValues="@array/notification_slider_action_entry_values" />
+    <ListPreference
+      android:key="keycode_bottom_position"
+      android:dialogTitle="@string/notification_slider_selection_dialog_title"
+      android:title="@string/notification_slider_bottom_position"
+      android:summary="%s"
+      android:entries="@array/notification_slider_action_entries"
+      android:entryValues="@array/notification_slider_action_entry_values" />
 
-        <ListPreference
-          android:key="keycode_bottom_position"
-          android:dialogTitle="@string/notification_slider_selection_dialog_title"
-          android:title="@string/notification_slider_bottom_position"
-          android:summary="%s"
-          android:entries="@array/notification_slider_action_entries"
-          android:entryValues="@array/notification_slider_action_entry_values" />
-
-    </PreferenceCategory>
+    <com.android.settingslib.widget.FooterPreference
+        android:key="keycode_footer"
+        android:selectable="false"
+        android:title="@string/notification_slider_help_text"
+        settings:allowDividerAbove="true" />
 
 </PreferenceScreen>
